--- a/PythonAssignment1.ipynb
+++ b/PythonAssignment1.ipynb
@@ -4,13 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Install Jupyter notebook and run the first program and share the screenshot of the output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hello World!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Program to print numbers which are divisble by 7 but not multiple of 5 between numbers 2000 and 3200 (including both)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -40,7 +66,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -64,12 +92,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Volume of radius having radisu 12 cm"
+    "# Volume of sphere having radius 12 cm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -89,11 +117,141 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Write a program which accepts a sequence of comma-separated numbers from console and generate a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Comma Separated numbers 1, 2, 3, 4, 5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "inputStr = input(\"Enter Comma Separated numbers \")\n",
+    "inputList = inputStr.split(\",\")\n",
+    "resultList = []\n",
+    "\n",
+    "for i in inputList:\n",
+    "    resultList.append(int(i))\n",
+    "    \n",
+    "resultList    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the below pattern using nested for loop in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(i):        \n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()\n",
+    "\n",
+    "for i in range(4, 0, -1):\n",
+    "    for j in range(i):        \n",
+    "        print(\"*\", end=\"\")\n",
+    "    print()    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python program to reverse a word after accepting the input from the user"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please enter a word Sujeet\n",
+      "Reverse String = teejuS \n"
+     ]
+    }
+   ],
+   "source": [
+    "inputStr = input(\"Please enter a word \")\n",
+    "reverseString = inputStr[::-1]\n",
+    "print(\"Reverse String = {} \".format(reverseString))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a Python Program to print the given string in the format specified in the sample output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WE, THE PEOPLE OF INDIA, \n",
+      " \t having solemnly resolved to constitute India into a SOVEREIGN,! \n",
+      " \t \t SOCIALIST, SECULAR, DEMOCRATIC REPUBLIC \n",
+      " \t \t  and to secure to all its citizens\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"WE, THE PEOPLE OF INDIA, \\n \\t having solemnly resolved to constitute India into a SOVEREIGN,! \\n \\t \\t SOCIALIST, SECULAR, DEMOCRATIC REPUBLIC \\n \\t \\t  and to secure to all its citizens\")"
+   ]
   }
  ],
  "metadata": {
